--- a/package.json
+++ b/package.json
@@ -13,61 +13,73 @@
     "start": "next start"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.4.0",
-    "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.4",
+    "@auth/prisma-adapter": "^2.9.1",
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
-    "@emotion/styled": "^11.11.5",
-    "@mui/lab": "^5.0.0-alpha.170",
-    "@mui/material": "^5.15.15",
+    "@emotion/styled": "^11.14.0",
+    "@mui/base": "^5.0.0-beta.70",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/lab": "^7.0.0-beta.12",
+    "@mui/material": "^7.1.0",
+    "@mui/styled-engine": "^7.1.0",
+    "@mui/system": "^7.1.0",
+    "@mui/utils": "^7.1.0",
+    "@mui/x-data-grid": "^8.3.0",
+    "@mui/x-data-grid-generator": "^8.3.0",
+    "@mui/x-data-grid-premium": "^8.3.0",
+    "@mui/x-date-pickers": "^8.3.0",
+    "@mui/x-date-pickers-pro": "^8.3.0",
     "@plaiceholder/next": "^3.0.0",
     "@popperjs/core": "^2.11.8",
-    "@prisma/client": "^5.10.2",
-    "@t3-oss/env-nextjs": "^0.9.2",
-    "@tanstack/react-query": "^5.25.0",
-    "@trpc/client": "next",
-    "@trpc/next": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
-    "apexcharts": "^3.48.0",
+    "@t3-oss/env-nextjs": "^0.13.4",
+    "@tailwindcss/postcss": "^4.1.6",
+    "@tanstack/react-query": "^5.76.0",
+    "@trpc/client": "^11.1.2",
+    "@trpc/next": "^11.1.2",
+    "@trpc/react-query": "^11.1.2",
+    "@trpc/server": "^11.1.2",
+    "apexcharts": "^4.0.0",
     "apexcharts-clevision": "^3.28.5",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
-    "dayjs": "^1.11.10",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
-    "mdi-material-ui": "^7.8.0",
-    "minio": "^7.1.3",
-    "next": "^14.2.1",
-    "next-auth": "^4.24.6",
+    "mdi-material-ui": "^7.9.4",
+    "minio": "^8.0.5",
+    "next": "^15.3.2",
+    "next-auth": "^4.24.11",
     "nprogress": "^0.2.0",
-    "react": "18.2.0",
-    "react-apexcharts": "^1.4.1",
-    "react-datepicker": "^6.9.0",
-    "react-dom": "18.2.0",
+    "react": "^19.1.0",
+    "react-apexcharts": "^1.7.0",
+    "react-datepicker": "^8.3.0",
+    "react-dom": "^19.1.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.3.0",
-    "redis": "^4.6.13",
-    "superjson": "^2.2.1",
+    "redis": "^5.0.1",
+    "superjson": "^2.2.2",
     "ts-node": "^10.9.2",
-    "zod": "^3.22.4"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.2",
-    "@types/node": "^20.11.20",
+    "@prisma/client": "^6.7.0",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^22.15.17",
     "@types/nprogress": "^0.2.3",
-    "@types/react": "^18.2.57",
+    "@types/react": "^19.1.4",
     "@types/react-datepicker": "^6.2.0",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
-    "postcss": "^8.4.34",
+    "@types/react-dom": "^19.1.4",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "^15.3.2",
+    "glob": "^11.0.2",
+    "postcss": "^8.5.3",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.10.2",
-    "tailwindcss": "^3.4.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "prisma": "^6.7.0",
+    "tailwindcss": "^4.1.6",
     "typescript": "^5.4.2"
   },
   "ct3aMetadata": {
